# advancedfx

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTENTS.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  HyperlinkTheme.wxl  HyperlinkTheme_zh-CN.wxl  LICENSE  README.md  advancedfx.sln  copy_resources_release.bat  en_US.wxl  how_to_build.txt  l10n_update_from_source.bat  l10n_update_to_source.bat  make_credits.py  make_readme.ps1  make_readme.py  related-tools.md  test.md  zh-CN.wxl
AfxCppCli/: .gitignore  (+6 more)
AfxHook/: AfxHook_586.asm  AfxHook_x64.asm  CMakeLists.txt  recompile_586.bat  recompile_x64.bat
AfxHookGoldSrc/: .gitignore  AfxGlImage.cpp  AfxGlImage.h  AfxGoldSrcComClient.cpp  AfxGoldSrcComClient.h  AfxHookGoldSrc.sln  AfxHookGoldSrc.vcxproj  AfxHookGoldSrc.vcxproj.filters  AfxImageUtils.cpp  AfxImageUtils.h  AfxMemory.cpp  AfxMemory.h  AfxSettings.cpp  AfxSettings.h  CMakeLists.txt  CampathDrawer.cpp  CampathDrawer.h  EasySampler.cpp  EasySampler.h  GameRecord.cpp  GameRecord.h  GlPrimMods.cpp  GlPrimMods.h  HltvFix.cpp  HltvFix.h  ICreateContext.h  MirvCommandArgs.cpp  MirvCommandArgs.h  Store.cpp  Store.h  aiming.cpp  aiming.h  cameraofs.cpp  camexport.cpp  camexport.h  camimport.cpp  camimport.h  cmd_tools.cpp  cmd_tools.h  cmdregister.h  (+58 more)
AfxHookGoldSrc/hooks/: HookGameLoaded.cpp  HookGameLoaded.h  HookHl.cpp  HookHl.h  HookHw.cpp  HookHw.h  OpenGl32Hooks.cpp  OpenGl32Hooks.h  gdi32Hooks.cpp  gdi32Hooks.h  interface.cpp  interface.h  user32Hooks.cpp  user32Hooks.h
AfxHookGoldSrc/hooks/DemoPlayer/: DemoPlayer.cpp  DemoPlayer.h
AfxHookGoldSrc/hooks/client/: HookClient.cpp  HookClient.h
AfxHookGoldSrc/hooks/client/cstrike/: CrossHairFix.cpp  CrossHairFix.h  SpectatorFix.cpp  SpectatorFix.h  ViewmodelAnimationFix.cpp  ViewmodelAnimationFix.h
AfxHookGoldSrc/hooks/hw/: CL_Disconnect.cpp  CL_Disconnect.h  ClientFunctions.cpp  ClientFunctions.h  Host_Frame.cpp  Host_Frame.h  Host_Init.cpp  Host_Init.h  Mod_LeafPvs.cpp  Mod_LeafPvs.h  R_DrawEntitiesOnList.cpp  R_DrawEntitiesOnList.h  R_DrawParticles.cpp  R_DrawParticles.h  R_DrawSkyBoxEx.cpp  R_DrawSkyBoxEx.h  R_DrawViewModel.cpp  R_DrawViewModel.h  R_PolyBlend.cpp  R_PolyBlend.h  R_RenderView.cpp  R_RenderView.h  UnkDrawHud.cpp  UnkDrawHud.h
AfxHookGoldSrc/hooks/svdll/: GiveFnptrsToDll.cpp  GiveFnptrsToDll.h  Server_GetBlendingInterface.cpp  Server_GetBlendingInterface.h
AfxHookSource/: .gitignore  AfxClasses.cpp  AfxClasses.h  AfxCommandLine.cpp  AfxCommandLine.h  AfxHookSource.vcxproj  AfxHookSource.vcxproj.filters  AfxHookSourceInput.cpp  AfxHookSourceInput.h  AfxImageBuffer.cpp  AfxImageBuffer.h  AfxInterfaces.h  AfxInterop.cpp  AfxInterop.h  AfxOutStreams.cpp  AfxOutStreams.h  AfxShaders.cpp  AfxShaders.h  AfxStreams.cpp  AfxStreams.h  AfxThreadedRefCounted.cpp  AfxThreadedRefCounted.h  AfxWriteFileLimiter.cpp  AfxWriteFileLimiter.h  CMakeLists.txt  CamIO.cpp  CamIO.h  CampathDrawer.cpp  CampathDrawer.h  ClientTools.cpp  ClientTools.h  CommandSystem.cpp  CommandSystem.h  D3D9ImageBuffer.h  FovScaling.cpp  FovScaling.h  Gui.cpp  Gui.h  MatRenderContextHook.cpp  MatRenderContextHook.h  (+92 more)
AfxHookSource/Model/: DemoTime.h  Dependencies.h  Events.h  Model.h  Properties.h  Schedule.h
AfxHookSource/Model/Tasks/: Record.h  Task.h
AfxHookSource/csgo/: AfxInterfaces.h  AfxMaterials.cpp  AfxMaterials.h  ClientToolsCsgo.cpp  ClientToolsCsgo.h  Panorama.cpp  Panorama.h  PanoramaHooks.cpp  PanoramaHooks.h
AfxHookSource/csgo/hooks/: PanoramaDebugger.cpp  c_baseanimating.cpp  c_baseanimating.h  c_basecombatweapon.cpp  c_basecombatweapon.h  c_basentity.cpp  c_basentity.h  engine.cpp  engine.h  materialsystem.cpp  materialsystem.h  shaderapidx9.cpp  shaderapidx9.h  staticpropmgr.cpp  staticpropmgr.h  studiorender.cpp  studiorender.h
AfxHookSource/csgo/hooks/client/: csgo_spectatortools.cpp
AfxHookSource/csgo/hooks/engine/: cmd.cpp  cmd.h
AfxHookSource/css/: ClientToolsCss.cpp  ClientToolsCss.h
AfxHookSource/cssV34/: ClientToolsCssV34.cpp  ClientToolsCssV34.h
AfxHookSource/garrysmod/: ClientToolsGarrysmod.cpp  ClientToolsGarrysmod.h
AfxHookSource/momentum/: ClientToolsMom.cpp  ClientToolsMom.h
AfxHookSource/tf2/: ClientToolsTf2.cpp  ClientToolsTf2.h
AfxHookSource2/: AfxHookSource2Rs.cpp  AfxHookSource2Rs.h  AfxShaders.cpp  AfxShaders.h  CMakeLists.txt  CVarRs.cpp  CamIO.cpp  CamIO.h  CampathDrawer.cpp  CampathDrawer.h  ClientEntitySystem.cpp  ClientEntitySystem.h  ConsoleRs.cpp  DeathMsg.cpp  DeathMsg.h  GameEvents.cpp  GameEvents.h  Globals.cpp  Globals.h  MirvCampath.cpp  MirvCampath.h  MirvColors.cpp  MirvColors.h  MirvCommands.cpp  MirvCommands.h  MirvFix.cpp  MirvFix.h  MirvInputEx.cpp  MirvInputEx.h  MirvPanorama.cpp  MirvPanorama.h  MirvPovHud.cpp  MirvPovHud.h  MirvPovRadar.cpp  MirvPovRadar.h  MirvPovVoice.cpp  MirvPovVoice.h  MirvTime.cpp  MirvTime.h  MirvVoiceHudFix.cpp  (+26 more)
AfxHookSource2Rs/: .gitignore  Cargo.toml  README.md  THIRDPARTY.yml
AfxHookSource2Rs/src/: lib.rs
AfxHookSource2Rs/src/advancedfx/: mod.rs
AfxHookSource2Rs/src/advancedfx/campath/: mod.rs
AfxHookSource2Rs/src/advancedfx/cvar/: mod.rs
AfxHookSource2Rs/src/advancedfx/js/: mod.rs
AfxHookSource2Rs/src/advancedfx/js/campath/: mod.rs
AfxHookSource2Rs/src/advancedfx/js/cvar/: mod.rs
AfxHookSource2Rs/src/advancedfx/js/errors/: mod.rs
AfxHookSource2Rs/src/advancedfx/js/events/: mod.rs
AfxHookSource2Rs/src/advancedfx/js/math/: mod.rs
AfxHookSource2Rs/src/advancedfx/math/: mod.rs
ShaderBuilder/: .gitignore  CMakeLists.txt  FxcCompile.cs  Program.cs  ShaderBuilder.csproj  ShaderBuilder.sln  SimplePerlExpression.cs  app.config  dummy.cs  packages.config
ShaderBuilder/Properties/: AssemblyInfo.cs
injector/: AfxError.cs  AfxErrors.cs  CMakeLists.txt  Injector.cs  InjectorErrors.cs  InjectorMessages.cs  Program.cs  injector.csproj
injector/Properties/: AssemblyInfo.cs
lib/afx_hook_source2/: Cargo.toml
lib/afx_hook_source2/src/: lib.rs
lib/afx_hook_source2/src/advancedfx/campath/: mod.rs
lib/afx_hook_source2/src/advancedfx/cvar/: mod.rs
(+437 files in other folders)
